# slack_socket_bridge

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.rs
